# Game-Engine

./: .gitignore  README.md  meson.build
src/: engine.cpp  fragment-shader.glsl  meson.build  util.h  vertex-shader.glsl
src/math/: vec.hpp
